# HonorsProject

./: Layouts.indd  README.md  diagram.psd
New_HonorProject/: CMakeLists.txt
StudentSuccessFinalUpdate/: CMakeLists.txt  mainwindow.ui
StudentSuccessQt/: StudentSuccessQt.pro  backend.cpp  backend.h  data.json  main.cpp  main.qml  resource.cpp  resource.h  signup.cpp  signup.h  signupmanager.cpp  signupmanager.h  student.cpp  student.h  user.cpp  user.h
ressources/: buttons.txt
studentSuccess/: main.cpp  mainwindow.ui
studentSuccess/classes/: main.cpp  user.cpp  user.h
studentSuccess/inheritance/: main.cpp  resource.h  student_data.txt
studentSuccessUpdate/: CMakeCache.txt  CMakeLists.txt  guidanceWindow.cpp  guidanceWindow.h  guidanceWindow.ui  guidancewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  milestoneWindow.cpp  milestoneWindow.h  milestoneWindow.ui  milestonewindow.cpp  milestonewindow.h  milestonewindow.ui  navigationwindow.cpp  navigationwindow.h  navigationwindow.ui  recommendationWindow.ui  recommendationwindow.cpp  recommendationwindow.h  recommendationwindow.ui  student.cpp  student.h  user.cpp  user.h
